2005-08-04  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-rgb.c: don't wrap deprecated function
	gimp_rgb_intensity().

2005-08-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpimagepropview.c: increased spacing between
	property groups to 12 pixels.

2005-08-04  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf.c: canonicalize PDB parameter names.

2005-08-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppaletteview.c: added cursor navigation.

2005-08-03  Sven Neumann  <sven@gimp.org>

	* app/vectors/gimpvectors-compat.[ch]
	* app/xcf/xcf-load.c
	* app/xcf/xcf-save.c: fixed signedness warnings.

2005-08-03  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpbaseenums.h: typo: FOEEGROUND -> FOREGROUND.

2005-08-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new):
	canonicalize hardcoded procedure names.

2005-08-03  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/module-dialog.c
	* app/dialogs/palette-import-dialog.c
	* app/gui/gui.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpvectortool.c
	* app/widgets/gimpaction.c
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcontainerbox.c
	* app/widgets/gimpcontainertreeview.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdnd.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpdockbook.c
	* app/widgets/gimpdrawabletreeview.c
	* app/widgets/gimpeditor.c
	* app/widgets/gimpenumaction.c
	* app/widgets/gimperrordialog.c
	* app/widgets/gimpfileprocview.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimpmessagebox.c
	* app/widgets/gimpmessagedialog.c
	* app/widgets/gimppluginaction.c
	* app/widgets/gimpprogressdialog.c
	* app/widgets/gimpsamplepointeditor.c
	* app/widgets/gimpstringaction.c
	* app/widgets/gimptemplateeditor.c
	* app/widgets/gimptoolbox-image-area.c
	* app/widgets/gimptoolbox.c: use canonical names for signals and
	properties.
